--- a/Eventa.Mobile/Eventa/Views/Authentication/RegistrationView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Authentication/RegistrationView.axaml
@@ -36,14 +36,13 @@
         <!--  Main Content  -->
         <ScrollViewer>
             <Grid
-                Margin="20"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 RowDefinitions="auto, *">
                 <!--  Logo/Title  -->
                 <TextBlock
                     Grid.Row="0"
-                    Margin="0,20,0,20"
+                    Margin="0,0,0,20"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     FontFamily="{StaticResource JustAnotherHand}"
@@ -70,10 +69,13 @@
                             Foreground="#FF9999"
                             Text="Registration Form" />
 
-                        <Grid Grid.Row="1" RowDefinitions="auto, auto, auto, auto">
+                        <Grid Grid.Row="1" RowDefinitions="auto, auto, auto, auto, auto">
                             <!--  Username Field  -->
                             <StackPanel Grid.Row="0">
-                                <TextBox Name="UsernameTextBox" Watermark="Username" />
+                                <TextBox
+                                    Name="UsernameTextBox"
+                                    TextInputOptions.ContentType="Name"
+                                    Watermark="Username" />
                                 <TextBlock
                                     Margin="0,-60,10,15"
                                     HorizontalAlignment="Right"
@@ -85,7 +87,10 @@
 
                             <!--  Email Field  -->
                             <StackPanel Grid.Row="1">
-                                <TextBox Name="EmailTextBox" Watermark="Email" />
+                                <TextBox
+                                    Name="EmailTextBox"
+                                    TextInputOptions.ContentType="Email"
+                                    Watermark="Email" />
                                 <TextBlock
                                     Margin="0,-60,10,15"
                                     HorizontalAlignment="Right"
@@ -100,6 +105,7 @@
                                 <TextBox
                                     Name="PasswordTextBox"
                                     PasswordChar="●"
+                                    TextInputOptions.ContentType="Password"
                                     Watermark="Password" />
                                 <TextBlock
                                     Margin="0,-60,10,15"
@@ -115,7 +121,23 @@
                                 <TextBox
                                     Name="ConfirmPasswordTextBox"
                                     PasswordChar="●"
+                                    TextInputOptions.ContentType="Password"
                                     Watermark="Confirm Password" />
+                                <TextBlock
+                                    Margin="0,-60,10,15"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center"
+                                    FontSize="16"
+                                    Foreground="#FF9999"
+                                    Text="*" />
+                            </StackPanel>
+
+                            <!--  Organization Field  -->
+                            <StackPanel Grid.Row="4">
+                                <TextBox
+                                    Name="OrganizationTextBox"
+                                    TextInputOptions.ContentType="Name"
+                                    Watermark="Organization name" />
                                 <TextBlock
                                     Margin="0,-60,10,15"
                                     HorizontalAlignment="Right"
@@ -142,10 +164,17 @@
                             Cursor="Hand"
                             FontFamily="{StaticResource Kadwa}"
                             FontSize="16"
-                            Foreground="#FFB5B5">
+                            Foreground="#FF8181">
                             <Button.Styles>
-                                <Style Selector="Button:pointerover">
+                                <Style Selector="Button:pointerover /template/ ContentPresenter">
                                     <Setter Property="Background" Value="#FCE0E0" />
+                                    <Setter Property="Foreground" Value="#FF8181" />
+                                    <Setter Property="BorderBrush" Value="#FFB5B5" />
+                                </Style>
+                                <Style Selector="Button:pressed /template/ ContentPresenter">
+                                    <Setter Property="Background" Value="#FCE0E0" />
+                                    <Setter Property="Foreground" Value="#FF8181" />
+                                    <Setter Property="BorderBrush" Value="#FFB5B5" />
                                 </Style>
                             </Button.Styles>
                             <Button.Content>
@@ -165,21 +194,35 @@
                                 FontSize="13"
                                 Foreground="#666666"
                                 Text="Already have an account?" />
-                            <TextBlock
+                            <HyperlinkButton
                                 Name="LoginLink"
                                 Grid.Row="1"
                                 HorizontalAlignment="Center"
                                 Cursor="Hand"
                                 FontFamily="{StaticResource Kadwa}"
                                 FontSize="13"
-                                Foreground="#FF9999"
-                                Text="Login here...">
-                                <TextBlock.Styles>
-                                    <Style Selector="TextBlock:pointerover">
-                                        <Setter Property="TextDecorations" Value="Underline" />
+                                Foreground="#FF9999">
+                                <HyperlinkButton.Styles>
+                                    <Style Selector="HyperlinkButton">
+                                        <Setter Property="TextBlock.TextDecorations" />
                                     </Style>
-                                </TextBlock.Styles>
-                            </TextBlock>
+                                    <Style Selector="HyperlinkButton:pointerover /template/ ContentPresenter">
+                                        <Setter Property="Background" Value="Transparent" />
+                                        <Setter Property="Foreground" Value="#FF8181" />
+                                        <Setter Property="BorderBrush" Value="Transparent" />
+                                        <Setter Property="TextBlock.TextDecorations" Value="Underline" />
+                                    </Style>
+                                    <Style Selector="HyperlinkButton:pressed /template/ ContentPresenter">
+                                        <Setter Property="Background" Value="Transparent" />
+                                        <Setter Property="Foreground" Value="#FF8181" />
+                                        <Setter Property="BorderBrush" Value="Transparent" />
+                                        <Setter Property="TextBlock.TextDecorations" Value="Underline" />
+                                    </Style>
+                                </HyperlinkButton.Styles>
+                                <HyperlinkButton.Content>
+                                    <TextBlock Text="Login here..." />
+                                </HyperlinkButton.Content>
+                            </HyperlinkButton>
                         </Grid>
 
                     </Grid>
