--- a/Eventa.Mobile/Eventa/Views/MainView.axaml
+++ b/Eventa.Mobile/Eventa/Views/MainView.axaml
@@ -5,12 +5,14 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:Eventa.ViewModels"
-    d:DesignHeight="450"
+    d:DesignHeight="750"
     d:DesignWidth="800"
     x:DataType="vm:MainViewModel"
     mc:Ignorable="d">
     <Design.DataContext>
         <vm:MainViewModel />
     </Design.DataContext>
-    <UserControl Content="{Binding CurrentPage, Mode=OneWay}" />
+    <ScrollViewer HorizontalScrollBarVisibility="Hidden">
+        <UserControl Content="{Binding CurrentPage, Mode=OneWay}" />
+    </ScrollViewer>
 </UserControl>
