Refactor MainWindow and MainView components
Refactored `MainWindow` and `MainView` to `MainWindowView` and `MainPageView` for improved naming consistency. Updated `App.axaml.cs` to use `MainWindowView`.

Reorganized project structure by moving `MainPageView` and `MainView` files to `Views/Main` and updated `Eventa.csproj` accordingly. Removed legacy implementations and introduced new `MainPageView` and `MainView` with enhanced UI, including navigation, filtering, and event display.

Moved `MainPageViewModel` and `MainViewModel` to `ViewModels/Main` and updated their logic. Updated references to the new structure across the project.

Improved security by removing the hardcoded database password from `appsettings.Development.json`. Performed general cleanup by removing unused code and improving file organization.

--- a/Eventa.Mobile/Eventa/Views/Main/MainView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Main/MainView.axaml
@@ -1,10 +1,10 @@
 <UserControl
-    x:Class="Eventa.Views.MainView"
+    x:Class="Eventa.Views.Main.MainView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="clr-namespace:Eventa.ViewModels"
+    xmlns:vm="clr-namespace:Eventa.ViewModels.Main"
     d:DesignHeight="750"
     d:DesignWidth="800"
     x:DataType="vm:MainViewModel"
@@ -12,7 +12,5 @@
     <Design.DataContext>
         <vm:MainViewModel />
     </Design.DataContext>
-    <ScrollViewer HorizontalScrollBarVisibility="Hidden">
-        <UserControl Content="{Binding CurrentPage, Mode=OneWay}" />
-    </ScrollViewer>
+    <UserControl Content="{Binding CurrentPage, Mode=OneWay}" />
 </UserControl>
