--- a/Eventa.Mobile/Eventa/Views/Main/MainWindowView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Main/MainWindowView.axaml
@@ -1,10 +1,10 @@
 <Window
-    x:Class="Eventa.Views.MainWindow"
+    x:Class="Eventa.Views.Main.MainWindowView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:views="clr-namespace:Eventa.Views"
+    xmlns:views="clr-namespace:Eventa.Views.Main"
     xmlns:vm="using:Eventa.ViewModels"
     Title="Eventa"
     Width="400"
